Optimize Collapse content layout - Resolve #46

--- a/src/styles/components/_Collapse.scss
+++ b/src/styles/components/_Collapse.scss
@@ -48,7 +48,7 @@
     --background-color: var(--interface-gray-0);
     left: 0;
     width: 100%;
-    --padding: var(--ls-75p);
+    --padding-vertical: var(--ls-50p);
     --border-radius: var(--ls-50p);
   }
   & > summary:first-of-type {
